# ChromaAI

./: .gitignore  Dockerfile  NOTES.md  README.md  SECURITY.md  benchmark_results_task2.json  docker-compose.yml  pyproject.toml  requirements.txt  rs_codec.py  rs_error_diagnostic.py  rs_error_diagnostic_crf32.py  rs_error_diagnostic_crf32_results.json  rs_error_diagnostic_results.json  run_benchmark.py  streamlit_app.py
api/: main.py
chromaai_demo/: app.py  engine.py
chromacascade demo/: app.py  requirements.txt
demo/: app.py
docs/: api.md  benchmarks.md  eu-act.md
src/: __init__.py  core.py  embed.py  keyed_crypto.py  texture_gating.py  verify.py
tests/: test_benchmark.py  test_keyed_crypto.py
