[project]
name = "chroma-ai"
version = "1.0.0"
description = "Honest dual-band DCT video watermarking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "opencv-python-headless>=4.8",
    "cryptography>=41.0",
    "reedsolo>=1.7",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn>=0.23", "python-multipart>=0.0.6"]
demo = ["streamlit>=1.28"]
dev = ["pytest>=7.4"]
